// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Should renders Home page component with VideoThumbnail 1`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    ...loading
  </section>
</div>
`;

exports[`Home Page Should renders Home page component with VideoThumbnail 2`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    <div
      data-testid="video-thumbnail"
    >
      <p>
        Dummy Video Thumbnail component 
        fakeVideoId1
      </p>
    </div>
    <div
      data-testid="video-thumbnail"
    >
      <p>
        Dummy Video Thumbnail component 
        fakeVideoId2
      </p>
    </div>
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 1`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    ...loading
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 2`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    Something was wrong
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 1`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    ...loading
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 2`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    Something was wrong
  </section>
</div>
`;
